Bug fix Z-index header mobile

--- a/ressources/css/style.css
+++ b/ressources/css/style.css
@@ -306,6 +306,7 @@ h5 {
 header {
     position: sticky;
     top: 0;
+    z-index:1
 }
 
 .logo,
@@ -345,6 +346,7 @@ header {
 
 .mobile-nav.open {
     display: block;
+    z-index:1;
 }
 
 nav {
